--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -3,11 +3,11 @@
 // quick edits go here.
 
 .go{
-	color:green;
+	color:red;
 }
 .set{
-	color:yellow;
+	color:purple;
 }
 .ready{
-	color:blue;
+	color:pink;
 }
