fixed grunt and partials

--- a/css/sass/partials/_all.scss
+++ b/css/sass/partials/_all.scss
@@ -1,4 +1,4 @@
-@include "header";
-@include "nav";
-@include "inner-home";
-@include "footer";
+@import "header";
+@import "nav";
+@import "inner-home";
+@import "footer";
