--- a/src/css/sass/partials/_all.scss
+++ b/src/css/sass/partials/_all.scss
@@ -1,4 +1,6 @@
+@import "lib";
 @import "header";
+@import "product-section";
 @import "nav";
-@import "inner-home";
+@import "banner";
 @import "footer";
