--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,73 +1,705 @@
-/*  Syntax quick reference
- *  ----------------------
- *  gutter[gut, g] = 1[float between 0 and 1]
- *  cf() - clearfix
- *  center(max_width = 1410px)
- *  column[col](numerator = 1, denominator = 1, number_of_nested_columns = 0)
- *  span(numerator = 1, denominator = 1)
- *  offset[off](numerator = 0, denominator = 0, col_or_span = column[col, c, span, s], left_or_right = left[right])
- *  get(numerator = 1, denominator = 1, col_or_span = column[col, c, span, s])
- *  bp(w = 705px, mobile_first = false[mf])
- *  endbp()
- *  stack(align = center[c, left, l, right, r])
- *  pxfix()
- */
-/* line 135, sass/jeet/_framework.scss */
-* {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  *behavior: url(js/vendor/boxsizing.htc); }
+/*  Syntax Quick Reference
+    ----------------------
+    @include edit;
+    @include center($max_width: 1410px, $pad: 0);
+    @include stack($pad: 0, $align: center);
+    @include unstack;
+    @include align($direction: both);
+    @include cf;
+    @include column($ratios: 1, $offset: 0, $cycle: 0, $uncycle: 0);
+    @include span($ratio: 1, $offset: 0);
+    @include shift($ratios: 0, $col_or_span: column);
+    @include unshift;
+*/
+/* line 2, sass/jeet/_reset.scss */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+main,
+nav,
+section,
+summary {
+  display: block; }
 
-/* line 139, sass/jeet/_framework.scss */
+/* line 16, sass/jeet/_reset.scss */
+audio,
+canvas,
+video {
+  display: inline-block; }
+
+/* line 21, sass/jeet/_reset.scss */
+audio:not([controls]) {
+  display: none;
+  height: 0; }
+
+/* line 25, sass/jeet/_reset.scss */
+[hidden],
+template {
+  display: none; }
+
+/* line 29, sass/jeet/_reset.scss */
+html {
+  font-family: sans-serif;
+  text-size-adjust: 100%; }
+
+/* line 33, sass/jeet/_reset.scss */
+body {
+  margin: 0; }
+
+/* line 36, sass/jeet/_reset.scss */
+a {
+  background: transparent; }
+
+/* line 39, sass/jeet/_reset.scss */
+a:focus {
+  outline: thin dotted; }
+
+/* line 42, sass/jeet/_reset.scss */
+a:active,
+a:hover {
+  outline: 0; }
+
+/* line 46, sass/jeet/_reset.scss */
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0; }
+
+/* line 50, sass/jeet/_reset.scss */
+abbr[title] {
+  border-bottom: 1px dotted; }
+
+/* line 53, sass/jeet/_reset.scss */
+b,
+strong {
+  font-weight: bold; }
+
+/* line 57, sass/jeet/_reset.scss */
+dfn {
+  font-style: italic; }
+
+/* line 60, sass/jeet/_reset.scss */
+hr {
+  box-sizing: content-box;
+  height: 0; }
+
+/* line 64, sass/jeet/_reset.scss */
+mark {
+  background: #ff0;
+  color: #000; }
+
+/* line 68, sass/jeet/_reset.scss */
+code,
+kbd,
+pre,
+samp {
+  font-family: monospace, serif;
+  font-size: 1em; }
+
+/* line 75, sass/jeet/_reset.scss */
+pre {
+  white-space: pre-wrap; }
+
+/* line 78, sass/jeet/_reset.scss */
+q {
+  quotes: "\201C" "\201D" "\2018" "\2019"; }
+
+/* line 81, sass/jeet/_reset.scss */
+small {
+  font-size: 80%; }
+
+/* line 84, sass/jeet/_reset.scss */
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline; }
+
+/* line 91, sass/jeet/_reset.scss */
+sup {
+  top: -0.5em; }
+
+/* line 94, sass/jeet/_reset.scss */
+sub {
+  bottom: -0.25em; }
+
+/* line 97, sass/jeet/_reset.scss */
+img {
+  border: 0; }
+
+/* line 100, sass/jeet/_reset.scss */
+svg:not(:root) {
+  overflow: hidden; }
+
+/* line 103, sass/jeet/_reset.scss */
+figure {
+  margin: 0; }
+
+/* line 106, sass/jeet/_reset.scss */
+fieldset {
+  border: 1px solid #c0c0c0;
+  margin: 0 2px;
+  padding: 0.35em 0.625em 0.75em; }
+
+/* line 111, sass/jeet/_reset.scss */
+legend {
+  border: 0;
+  padding: 0; }
+
+/* line 115, sass/jeet/_reset.scss */
+button,
+input,
+select,
+textarea {
+  font-family: inherit;
+  font-size: 100%;
+  margin: 0; }
+
+/* line 123, sass/jeet/_reset.scss */
+button,
+input {
+  line-height: normal; }
+
+/* line 127, sass/jeet/_reset.scss */
+button,
+select {
+  text-transform: none; }
+
+/* line 131, sass/jeet/_reset.scss */
+button,
+html input[type="button"],
+input[type="reset"],
+input[type="submit"] {
+  -webkit-appearance: button;
+  cursor: pointer; }
+
+/* line 138, sass/jeet/_reset.scss */
+button[disabled],
+html input[disabled] {
+  cursor: default; }
+
+/* line 142, sass/jeet/_reset.scss */
+input[type="checkbox"],
+input[type="radio"] {
+  box-sizing: border-box;
+  padding: 0; }
+
+/* line 147, sass/jeet/_reset.scss */
+input[type="search"] {
+  -webkit-appearance: textfield;
+  box-sizing: content-box; }
+
+/* line 151, sass/jeet/_reset.scss */
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none; }
+
+/* line 155, sass/jeet/_reset.scss */
+button::-moz-focus-inner,
+input::-moz-focus-inner {
+  border: 0;
+  padding: 0; }
+
+/* line 160, sass/jeet/_reset.scss */
+textarea {
+  overflow: auto;
+  vertical-align: top; }
+
+/* line 164, sass/jeet/_reset.scss */
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
+/* line 172, sass/jeet/_reset.scss */
+*, *:before, *:after, *::before, *::after {
+  *behavior: url(js/vendor/boxsizing.htc);
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0; }
+
+/* line 178, sass/jeet/_reset.scss */
 html {
   overflow-y: scroll;
   overflow-x: hidden; }
 
-/* line 143, sass/jeet/_framework.scss */
+/* line 182, sass/jeet/_reset.scss */
 body {
   *zoom: 1;
   width: 100%; }
-  /* line 38, ../../../../../../Ruby200-x64/lib/ruby/gems/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/general/_clearfix.scss */
+  /* line 89, sass/jeet/_utilities.scss */
+  body:before, body:after {
+    content: '';
+    display: table; }
+  /* line 93, sass/jeet/_utilities.scss */
   body:after {
-    content: "";
-    display: table;
     clear: both; }
 
-/* line 147, sass/jeet/_framework.scss */
+/* line 186, sass/jeet/_reset.scss */
 img, video, audio, embed, object, input, iframe {
   max-width: 100%; }
 
-/* line 150, sass/jeet/_framework.scss */
-.placeholder {
-  color: #aaa; }
+/* line 189, sass/jeet/_reset.scss */
+.cf {
+  *zoom: 1; }
+  /* line 89, sass/jeet/_utilities.scss */
+  .cf:before, .cf:after {
+    content: '';
+    display: table; }
+  /* line 93, sass/jeet/_utilities.scss */
+  .cf:after {
+    clear: both; }
 
+/* line 192, sass/jeet/_reset.scss */
+.browsehappy {
+  width: 100%;
+  padding: 15px 0;
+  background: #fff;
+  border-bottom: 1px solid #ddd; }
+  /* line 197, sass/jeet/_reset.scss */
+  .browsehappy p {
+    *zoom: 1;
+    width: auto;
+    max-width: 1410px;
+    float: none;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    padding-left: 0;
+    padding-right: 0;
+    text-align: center; }
+    /* line 89, sass/jeet/_utilities.scss */
+    .browsehappy p:before, .browsehappy p:after {
+      content: '';
+      display: table; }
+    /* line 93, sass/jeet/_utilities.scss */
+    .browsehappy p:after {
+      clear: both; }
+    /* line 200, sass/jeet/_reset.scss */
+    .browsehappy p:last-of-type {
+      margin-bottom: 0; }
+  /* line 204, sass/jeet/_reset.scss */
+  .browsehappy a {
+    color: blue; }
+
+/* line 15, sass/jeet/_typography.scss */
+html {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 200;
+  color: #444444;
+  font-size: 10.67px;
+  line-height: 16.005px; }
+
+/* line 22, sass/jeet/_typography.scss */
+a {
+  color: #00a6fc; }
+  /* line 24, sass/jeet/_typography.scss */
+  a:hover {
+    color: #0084c9; }
+
+/* line 28, sass/jeet/_typography.scss */
+h1, h2, h3, h4, h5, h6, p, ul, ol, dt, pre, code {
+  margin-top: 0; }
+
+/* line 31, sass/jeet/_typography.scss */
+h1, h2, h3, h4, h5, h6, dt {
+  font-family: "Bodoni MT", Didot, "Didot LT STD", "Hoefler Text", Garamond, "Times New Roman", serif;
+  font-weight: 200;
+  color: #111111;
+  letter-spacing: -.025em; }
+
+/* line 60, sass/jeet/_typography.scss */
+h1 {
+  font-size: 29.876px;
+  line-height: 32.01px;
+  margin-bottom: 10.67px; }
+
+/* line 65, sass/jeet/_typography.scss */
+h2 {
+  font-size: 26.675px;
+  line-height: 29.876px;
+  margin-bottom: 8.536px; }
+
+/* line 70, sass/jeet/_typography.scss */
+h3 {
+  font-size: 23.474px;
+  line-height: 27.742px;
+  margin-bottom: 6.402px; }
+
+/* line 75, sass/jeet/_typography.scss */
+h4 {
+  font-size: 21.34px;
+  line-height: 25.608px;
+  margin-bottom: 4.268px; }
+
+/* line 80, sass/jeet/_typography.scss */
+h5 {
+  font-size: 17.072px;
+  line-height: 23.474px;
+  margin-bottom: 2.134px; }
+
+/* line 85, sass/jeet/_typography.scss */
+h6 {
+  font-size: 13.871px;
+  line-height: 21.34px;
+  margin-bottom: 0px; }
+
+/* line 90, sass/jeet/_typography.scss */
+p, ul, ol, pre, dl {
+  margin-bottom: 10.67px; }
+
+/* line 93, sass/jeet/_typography.scss */
+ul, ol {
+  padding-left: 1.4em; }
+
+/* line 96, sass/jeet/_typography.scss */
+li, dd {
+  margin-bottom: 5.335px; }
+
+/* line 99, sass/jeet/_typography.scss */
+pre {
+  font-size: 8.536px; }
+
+/* line 103, sass/jeet/_typography.scss */
+header p {
+  color: #aaaaaa; }
+/* line 104, sass/jeet/_typography.scss */
+header h1 ~ p {
+  margin-top: -5.335px; }
+/* line 105, sass/jeet/_typography.scss */
+header h2 ~ p {
+  margin-top: -4.268px; }
+/* line 106, sass/jeet/_typography.scss */
+header h3 ~ p {
+  margin-top: -3.201px; }
+/* line 107, sass/jeet/_typography.scss */
+header h4 ~ p {
+  margin-top: -2.134px; }
+/* line 108, sass/jeet/_typography.scss */
+header h5 ~ p {
+  margin-top: -1.067px; }
+/* line 109, sass/jeet/_typography.scss */
+header h6 ~ p {
+  margin-top: -1.067px; }
+
+/* line 111, sass/jeet/_typography.scss */
+code {
+  padding: 3px 4px;
+  color: #444444;
+  background-color: #F5F5F5;
+  border: 1px solid #E1E1E8;
+  border-radius: 3px;
+  font-family: Menlo, Monaco, monospace; }
+
+/* line 119, sass/jeet/_typography.scss */
+pre {
+  display: block;
+  padding: 7px;
+  background-color: #F5F5F5;
+  border: 1px solid #E1E1E8;
+  border-radius: 3px;
+  white-space: pre-wrap;
+  word-break: break-all;
+  font-family: Menlo, Monaco, monospace;
+  line-height: 160%; }
+
+/* line 131, sass/jeet/_typography.scss */
+.browsehappy span {
+  font-size: 8.536px; }
+
+@media (min-width: 705px) {
+  /* line 138, sass/jeet/_typography.scss */
+  html {
+    font-size: 18.75px;
+    line-height: 28.125px; }
+
+  /* line 142, sass/jeet/_typography.scss */
+  h1 {
+    font-size: 52.5px;
+    line-height: 56.25px;
+    margin-bottom: 18.75px; }
+
+  /* line 147, sass/jeet/_typography.scss */
+  h2 {
+    font-size: 46.875px;
+    line-height: 52.5px;
+    margin-bottom: 15px; }
+
+  /* line 152, sass/jeet/_typography.scss */
+  h3 {
+    font-size: 41.25px;
+    line-height: 48.75px;
+    margin-bottom: 11.25px; }
+
+  /* line 157, sass/jeet/_typography.scss */
+  h4 {
+    font-size: 35.625px;
+    line-height: 45px;
+    margin-bottom: 7.5px; }
+
+  /* line 162, sass/jeet/_typography.scss */
+  h5 {
+    font-size: 30px;
+    line-height: 41.25px;
+    margin-bottom: 3.75px; }
+
+  /* line 167, sass/jeet/_typography.scss */
+  h6 {
+    font-size: 24.375px;
+    line-height: 37.5px;
+    margin-bottom: 0px; }
+
+  /* line 172, sass/jeet/_typography.scss */
+  p, ul, ol, pre, dl {
+    margin-bottom: 18.75px; }
+
+  /* line 175, sass/jeet/_typography.scss */
+  li, dd {
+    margin-bottom: 9.375px; }
+
+  /* line 178, sass/jeet/_typography.scss */
+  pre {
+    font-size: 15px; }
+
+  /* line 182, sass/jeet/_typography.scss */
+  header h1 ~ p {
+    margin-top: -9.375px; }
+  /* line 183, sass/jeet/_typography.scss */
+  header h2 ~ p {
+    margin-top: -7.5px; }
+  /* line 184, sass/jeet/_typography.scss */
+  header h3 ~ p {
+    margin-top: -5.625px; }
+  /* line 185, sass/jeet/_typography.scss */
+  header h4 ~ p {
+    margin-top: -3.75px; }
+  /* line 186, sass/jeet/_typography.scss */
+  header h5 ~ p {
+    margin-top: -1.875px; }
+  /* line 187, sass/jeet/_typography.scss */
+  header h6 ~ p {
+    margin-top: -1.875px; } }
 /**
 * declare your variables here. feel free to make a new file
 **/
 /**
 *Base Styles
 **/
-/* line 11, sass/_base.scss */
+/* line 15, sass/_base.scss */
 body {
-  font-size: 100%;
-  color: #777777; }
+  font-size: .9em;
+  color: #444444; }
+
+/* line 19, sass/_base.scss */
+h1, h2, h3, h4, h5, h6, p, li {
+  margin: 0;
+  padding: 0; }
 
 /* line 24, sass/_base.scss */
-h1, h2, h3, h4, h5, h6 {
-  margin: 0; }
+.wrapper {
+  width: 100%; }
+
+/* line 27, sass/_base.scss */
+.clear {
+  clear: both; }
+
+/* line 30, sass/_base.scss */
+.inner-wrapper {
+  width: 85%;
+  margin: 0 auto; }
+
+/* line 35, sass/_base.scss */
+a:hover {
+  text-decoration: none; }
 
 /**
 *imports
 **/
-/* line 5, sass/main.scss */
-.go {
-  color: red; }
+/* line 2, sass/partials/_lib.scss */
+.inner-wrapper:after, .top-header:after, .product-section .inner-wrapper:after, .product-section .product-list:after, .super-banner:after, .main-footer .footer-nav:after {
+  clear: both;
+  display: block;
+  content: " ";
+  height: 0px;
+  visibility: hidden; }
 
-/* line 8, sass/main.scss */
-.set {
-  color: purple; }
+/* line 11, sass/partials/_lib.scss */
+.emphasize {
+  color: #4ab75c; }
 
-/* line 11, sass/main.scss */
-.ready {
-  color: pink; }
+/* line 14, sass/partials/_lib.scss */
+.tel {
+  color: #eeeeee; }
+  /* line 16, sass/partials/_lib.scss */
+  .tel:hover {
+    color: #aaaaaa; }
+
+/* line 20, sass/partials/_lib.scss */
+.separator {
+  margin: 0 2px; }
+
+/* line 1, sass/partials/_header.scss */
+.top-header {
+  background-color: #222222;
+  padding: 15px;
+  font-size: .8em; }
+  /* line 7, sass/partials/_header.scss */
+  .top-header .logo {
+    float: left; }
+  /* line 10, sass/partials/_header.scss */
+  .top-header > * {
+    float: right; }
+  /* line 13, sass/partials/_header.scss */
+  .top-header .main-nav {
+    margin-right: 30px; }
+    /* line 16, sass/partials/_header.scss */
+    .top-header .main-nav a {
+      margin-right: 15px;
+      color: #eeeeee; }
+      /* line 19, sass/partials/_header.scss */
+      .top-header .main-nav a:hover {
+        color: #aaaaaa; }
+
+/* line 1, sass/partials/_product-section.scss */
+.product-section {
+  margin-top: 20px; }
+  /* line 6, sass/partials/_product-section.scss */
+  .product-section .product-nav {
+    border-bottom: 1px solid #eee;
+    padding-bottom: 5px;
+    margin-bottom: 20px; }
+    /* line 10, sass/partials/_product-section.scss */
+    .product-section .product-nav .active {
+      color: #000;
+      border-bottom: 1px solid #b7e3bf;
+      padding-bottom: 3px; }
+    /* line 16, sass/partials/_product-section.scss */
+    .product-section .product-nav a {
+      font-size: 1.5em;
+      color: #444444; }
+      /* line 20, sass/partials/_product-section.scss */
+      .product-section .product-nav a:hover {
+        text-decoration: none;
+        color: #888888; }
+  /* line 26, sass/partials/_product-section.scss */
+  .product-section .breadcrumb {
+    padding: 5px 8px;
+    font-size: .8em;
+    float: left;
+    background-color: transparent; }
+    /* line 31, sass/partials/_product-section.scss */
+    .product-section .breadcrumb a {
+      color: #aaa; }
+  /* line 35, sass/partials/_product-section.scss */
+  .product-section .search {
+    margin-right: 9%;
+    float: right; }
+    /* line 38, sass/partials/_product-section.scss */
+    .product-section .search input {
+      width: 150px;
+      border-radius: 0;
+      height: 25px; }
+  /* line 44, sass/partials/_product-section.scss */
+  .product-section .product-list {
+    position: relative;
+    height: 100%;
+    display: table;
+    border-collapse: collapse;
+    padding: 10px; }
+    /* line 51, sass/partials/_product-section.scss */
+    .product-section .product-list .product {
+      *zoom: 1;
+      float: left;
+      display: inline;
+      clear: none;
+      text-align: inherit;
+      padding-left: 0;
+      padding-right: 0;
+      width: 20.5%;
+      margin-left: 0%;
+      margin-right: 6%;
+      margin-bottom: 20px;
+      text-align: center; }
+      /* line 89, sass/jeet/_utilities.scss */
+      .product-section .product-list .product:before, .product-section .product-list .product:after {
+        content: '';
+        display: table; }
+      /* line 93, sass/jeet/_utilities.scss */
+      .product-section .product-list .product:after {
+        clear: both; }
+      /* line 36, sass/jeet/_grid.scss */
+      .product-section .product-list .product:nth-child(4n) {
+        margin-right: 0%;
+        float: right; }
+      /* line 55, sass/partials/_product-section.scss */
+      .product-section .product-list .product .info {
+        font-size: .9em;
+        border-top: 1px solid #ddd;
+        margin-top: 15px;
+        text-align: left;
+        color: #222; }
+        /* line 61, sass/partials/_product-section.scss */
+        .product-section .product-list .product .info .type {
+          font-size: .8em;
+          color: #999; }
+    /* line 67, sass/partials/_product-section.scss */
+    .product-section .product-list .pagination {
+      display: table-row;
+      vertical-align: bottom; }
+
+/* line 1, sass/partials/_banner.scss */
+.super-banner {
+  position: relative;
+  text-align: right;
+  padding-top: 17%;
+  padding-bottom: 7%;
+  margin-bottom: 10px; }
+  /* line 12, sass/partials/_banner.scss */
+  .super-banner .pitch {
+    font-size: 2em; }
+  /* line 15, sass/partials/_banner.scss */
+  .super-banner .btn-brand {
+    background-color: #4AB75C;
+    color: #fff;
+    border: 2px solid #D5CED5; }
+  /* line 20, sass/partials/_banner.scss */
+  .super-banner .btn-brand-secondary {
+    background-color: #222222;
+    color: #000;
+    border: 2px solid #D5CED5; }
+
+/* line 1, sass/partials/_footer.scss */
+.main-footer {
+  width: 100%;
+  background-color: #222222;
+  margin-top: 30px;
+  padding: 20px;
+  font-size: .8em; }
+  /* line 8, sass/partials/_footer.scss */
+  .main-footer .footer-nav {
+    float: left;
+    margin-left: 40px; }
+    /* line 13, sass/partials/_footer.scss */
+    .main-footer .footer-nav a {
+      display: block;
+      color: #aaaaaa; }
+      /* line 16, sass/partials/_footer.scss */
+      .main-footer .footer-nav a:hover {
+        color: white; }
+    /* line 21, sass/partials/_footer.scss */
+    .main-footer .footer-nav .header {
+      margin-bottom: 20px;
+      color: #eeeeee; }
+    /* line 26, sass/partials/_footer.scss */
+    .main-footer .footer-nav:first-child {
+      margin-left: 0; }
+  /* line 31, sass/partials/_footer.scss */
+  .main-footer .copywrite {
+    text-align: center;
+    margin-top: 5px;
+    color: #aaaaaa;
+    font-size: .75em; }
