--- a/src/css/sass/bootstrap.scss
+++ b/src/css/sass/bootstrap.scss
@@ -33,17 +33,17 @@
 @import "bootstrap/glyphicons";
 // @import "bootstrap/dropdowns";
 // @import "bootstrap/button-groups";
-// @import "bootstrap/input-groups";
-@import "bootstrap/navs";
-@import "bootstrap/navbar";
-// @import "bootstrap/breadcrumbs";
-// @import "bootstrap/pagination";
+@import "bootstrap/input-groups";
+// @import "bootstrap/navs";
+// @import "bootstrap/navbar";
+@import "bootstrap/breadcrumbs";
+@import "bootstrap/pagination";
 // @import "bootstrap/pager";
-@import "bootstrap/labels";
-@import "bootstrap/badges";
+// @import "bootstrap/labels";
+// @import "bootstrap/badges";
 // @import "bootstrap/jumbotron";
 // @import "bootstrap/thumbnails";
-// @import "bootstrap/alerts";
+@import "bootstrap/alerts";
 // @import "bootstrap/progress-bars";
 // @import "bootstrap/media";
 // @import "bootstrap/list-group";
