--- a/src/css/sass/jeet/_settings.scss
+++ b/src/css/sass/jeet/_settings.scss
@@ -1,5 +1,5 @@
 // Responsive
-$mobile_first: true;
+$mobile_first: false;
 $breakpoint: 705px;
 
 //Better default colors - https://github.com/jenius/axis/blob/master/axis/settings.styl
@@ -21,7 +21,7 @@ $c4: darken(white, 5%);
 $c5: white;
 
 //Grid Settings
-$gutter: 3;
+$gutter: 6;
 $parent_first: false;
 $layout_direction: LTR;
 
@@ -75,11 +75,11 @@ $major_twelfth: 3;
 $double_octave: 4;
 
 // Typography Settings
-$headers: $helvetica;
+$headers: $bodoni;
 $header_color: #111;
 $header_weight: 200;
 $tagline_color: #aaa;
 $body: $helvetica;
 $body_color: #444;
-$primary_ratio: $perfect_fifth;
+$primary_ratio: $minor_second;
 $secondary_ratio: $major_seventh;
