--- a/src/sass/bootstrap.scss
+++ b/src/sass/bootstrap.scss
@@ -16,7 +16,7 @@
 @import "vendor/bootstrap/mixins";
 
 // Reset
-@import "vendor/bootstrap/normalize";
+// @import "vendor/bootstrap/normalize";
 // @import "vendor/bootstrap/print";
 
 // Core CSS
