--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -3,7 +3,7 @@
 * declare your variables here. feel free to make a new file
 **/
 $base-color: #444;
-$base-hover:#888;
+$base-light:#888;
 $brand-color:#4AB75C;
 
 /**
