--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,495 +1,20 @@
 /*  Syntax Quick Reference
-    ----------------------
-    @include edit;
-    @include center($max_width: 1410px, $pad: 0);
-    @include stack($pad: 0, $align: center);
-    @include unstack;
-    @include align($direction: both);
-    @include cf;
-    @include column($ratios: 1, $offset: 0, $cycle: 0, $uncycle: 0);
-    @include span($ratio: 1, $offset: 0);
-    @include shift($ratios: 0, $col_or_span: column);
-    @include unshift;
+  --------------------------
+  column($ratios: 1, $offset: 0, $cycle: 0, $uncycle: 0, $gutter: jeet(gutter))
+  span($ratio: 1, $offset: 0)
+  shift($ratios: 0, $col_or_span: column, $gutter: jeet(gutter))
+  unshift()
+  edit()
+  center($max_width: 1410px, $pad: 0)
+  stack($pad: 0, $align: false)
+  unstack()
+  align($direction: both)
+  cf()
 */
-/* line 2, ../sass/vendor/jeet/_reset.scss */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-main,
-nav,
-section,
-summary {
-  display: block; }
-
-/* line 16, ../sass/vendor/jeet/_reset.scss */
-audio,
-canvas,
-video {
-  display: inline-block; }
-
-/* line 21, ../sass/vendor/jeet/_reset.scss */
-audio:not([controls]) {
-  display: none;
-  height: 0; }
-
-/* line 25, ../sass/vendor/jeet/_reset.scss */
-[hidden],
-template {
-  display: none; }
-
-/* line 29, ../sass/vendor/jeet/_reset.scss */
-html {
-  font-family: sans-serif;
-  text-size-adjust: 100%; }
-
-/* line 33, ../sass/vendor/jeet/_reset.scss */
-body {
-  margin: 0; }
-
-/* line 36, ../sass/vendor/jeet/_reset.scss */
-a {
-  background: transparent; }
-
-/* line 39, ../sass/vendor/jeet/_reset.scss */
-a:focus {
-  outline: thin dotted; }
-
-/* line 42, ../sass/vendor/jeet/_reset.scss */
-a:active,
-a:hover {
-  outline: 0; }
-
-/* line 46, ../sass/vendor/jeet/_reset.scss */
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0; }
-
-/* line 50, ../sass/vendor/jeet/_reset.scss */
-abbr[title] {
-  border-bottom: 1px dotted; }
-
-/* line 53, ../sass/vendor/jeet/_reset.scss */
-b,
-strong {
-  font-weight: bold; }
-
-/* line 57, ../sass/vendor/jeet/_reset.scss */
-dfn {
-  font-style: italic; }
-
-/* line 60, ../sass/vendor/jeet/_reset.scss */
-hr {
-  box-sizing: content-box;
-  height: 0; }
-
-/* line 64, ../sass/vendor/jeet/_reset.scss */
-mark {
-  background: #ff0;
-  color: #000; }
-
-/* line 68, ../sass/vendor/jeet/_reset.scss */
-code,
-kbd,
-pre,
-samp {
-  font-family: monospace, serif;
-  font-size: 1em; }
-
-/* line 75, ../sass/vendor/jeet/_reset.scss */
-pre {
-  white-space: pre-wrap; }
-
-/* line 78, ../sass/vendor/jeet/_reset.scss */
-q {
-  quotes: "\201C" "\201D" "\2018" "\2019"; }
-
-/* line 81, ../sass/vendor/jeet/_reset.scss */
-small {
-  font-size: 80%; }
-
-/* line 84, ../sass/vendor/jeet/_reset.scss */
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline; }
-
-/* line 91, ../sass/vendor/jeet/_reset.scss */
-sup {
-  top: -0.5em; }
-
-/* line 94, ../sass/vendor/jeet/_reset.scss */
-sub {
-  bottom: -0.25em; }
-
-/* line 97, ../sass/vendor/jeet/_reset.scss */
-img {
-  border: 0; }
-
-/* line 100, ../sass/vendor/jeet/_reset.scss */
-svg:not(:root) {
-  overflow: hidden; }
-
-/* line 103, ../sass/vendor/jeet/_reset.scss */
-figure {
-  margin: 0; }
-
-/* line 106, ../sass/vendor/jeet/_reset.scss */
-fieldset {
-  border: 1px solid #c0c0c0;
-  margin: 0 2px;
-  padding: 0.35em 0.625em 0.75em; }
-
-/* line 111, ../sass/vendor/jeet/_reset.scss */
-legend {
-  border: 0;
-  padding: 0; }
-
-/* line 115, ../sass/vendor/jeet/_reset.scss */
-button,
-input,
-select,
-textarea {
-  font-family: inherit;
-  font-size: 100%;
-  margin: 0; }
-
-/* line 123, ../sass/vendor/jeet/_reset.scss */
-button,
-input {
-  line-height: normal; }
-
-/* line 127, ../sass/vendor/jeet/_reset.scss */
-button,
-select {
-  text-transform: none; }
-
-/* line 131, ../sass/vendor/jeet/_reset.scss */
-button,
-html input[type="button"],
-input[type="reset"],
-input[type="submit"] {
-  -webkit-appearance: button;
-  cursor: pointer; }
-
-/* line 138, ../sass/vendor/jeet/_reset.scss */
-button[disabled],
-html input[disabled] {
-  cursor: default; }
-
-/* line 142, ../sass/vendor/jeet/_reset.scss */
-input[type="checkbox"],
-input[type="radio"] {
-  box-sizing: border-box;
-  padding: 0; }
-
-/* line 147, ../sass/vendor/jeet/_reset.scss */
-input[type="search"] {
-  -webkit-appearance: textfield;
-  box-sizing: content-box; }
-
-/* line 151, ../sass/vendor/jeet/_reset.scss */
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none; }
-
-/* line 155, ../sass/vendor/jeet/_reset.scss */
-button::-moz-focus-inner,
-input::-moz-focus-inner {
-  border: 0;
-  padding: 0; }
-
-/* line 160, ../sass/vendor/jeet/_reset.scss */
-textarea {
-  overflow: auto;
-  vertical-align: top; }
-
-/* line 164, ../sass/vendor/jeet/_reset.scss */
-table {
-  border-collapse: collapse;
-  border-spacing: 0; }
-
-/* line 172, ../sass/vendor/jeet/_reset.scss */
-*, *:before, *:after, *::before, *::after {
-  *behavior: url(js/vendor/boxsizing.htc);
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0; }
-
-/* line 178, ../sass/vendor/jeet/_reset.scss */
-html {
-  overflow-y: scroll;
-  overflow-x: hidden; }
-
-/* line 182, ../sass/vendor/jeet/_reset.scss */
-body {
-  *zoom: 1;
-  width: 100%; }
-  /* line 89, ../sass/vendor/jeet/_utilities.scss */
-  body:before, body:after {
-    content: '';
-    display: table; }
-  /* line 93, ../sass/vendor/jeet/_utilities.scss */
-  body:after {
-    clear: both; }
-
-/* line 186, ../sass/vendor/jeet/_reset.scss */
-img, video, audio, embed, object, input, iframe {
-  max-width: 100%; }
-
-/* line 189, ../sass/vendor/jeet/_reset.scss */
-.cf {
-  *zoom: 1; }
-  /* line 89, ../sass/vendor/jeet/_utilities.scss */
-  .cf:before, .cf:after {
-    content: '';
-    display: table; }
-  /* line 93, ../sass/vendor/jeet/_utilities.scss */
-  .cf:after {
-    clear: both; }
-
-/* line 192, ../sass/vendor/jeet/_reset.scss */
-.browsehappy {
-  width: 100%;
-  padding: 15px 0;
-  background: #fff;
-  border-bottom: 1px solid #ddd; }
-  /* line 197, ../sass/vendor/jeet/_reset.scss */
-  .browsehappy p {
-    *zoom: 1;
-    width: auto;
-    max-width: 1410px;
-    float: none;
-    display: block;
-    margin-right: auto;
-    margin-left: auto;
-    padding-left: 0;
-    padding-right: 0;
-    text-align: center; }
-    /* line 89, ../sass/vendor/jeet/_utilities.scss */
-    .browsehappy p:before, .browsehappy p:after {
-      content: '';
-      display: table; }
-    /* line 93, ../sass/vendor/jeet/_utilities.scss */
-    .browsehappy p:after {
-      clear: both; }
-    /* line 200, ../sass/vendor/jeet/_reset.scss */
-    .browsehappy p:last-of-type {
-      margin-bottom: 0; }
-  /* line 204, ../sass/vendor/jeet/_reset.scss */
-  .browsehappy a {
-    color: blue; }
-
-/* line 15, ../sass/vendor/jeet/_typography.scss */
-html {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: 200;
-  color: #444444;
-  font-size: 13.33px;
-  line-height: 19.995px; }
-
-/* line 22, ../sass/vendor/jeet/_typography.scss */
-a {
-  color: #00a6fc; }
-  /* line 24, ../sass/vendor/jeet/_typography.scss */
-  a:hover {
-    color: #0084c9; }
-
-/* line 28, ../sass/vendor/jeet/_typography.scss */
-h1, h2, h3, h4, h5, h6, p, ul, ol, dt, pre, code {
-  margin-top: 0; }
-
-/* line 31, ../sass/vendor/jeet/_typography.scss */
-h1, h2, h3, h4, h5, h6, dt {
-  font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
-  font-weight: 200;
-  color: #111111;
-  letter-spacing: -.025em; }
-
-/* line 60, ../sass/vendor/jeet/_typography.scss */
-h1 {
-  font-size: 37.324px;
-  line-height: 39.99px;
-  margin-bottom: 13.33px; }
-
-/* line 65, ../sass/vendor/jeet/_typography.scss */
-h2 {
-  font-size: 33.325px;
-  line-height: 37.324px;
-  margin-bottom: 10.664px; }
-
-/* line 70, ../sass/vendor/jeet/_typography.scss */
-h3 {
-  font-size: 29.326px;
-  line-height: 34.658px;
-  margin-bottom: 7.998px; }
-
-/* line 75, ../sass/vendor/jeet/_typography.scss */
-h4 {
-  font-size: 26.66px;
-  line-height: 31.992px;
-  margin-bottom: 5.332px; }
-
-/* line 80, ../sass/vendor/jeet/_typography.scss */
-h5 {
-  font-size: 21.328px;
-  line-height: 29.326px;
-  margin-bottom: 2.666px; }
-
-/* line 85, ../sass/vendor/jeet/_typography.scss */
-h6 {
-  font-size: 17.329px;
-  line-height: 26.66px;
-  margin-bottom: 0px; }
-
-/* line 90, ../sass/vendor/jeet/_typography.scss */
-p, ul, ol, pre, dl {
-  margin-bottom: 13.33px; }
-
-/* line 93, ../sass/vendor/jeet/_typography.scss */
-ul, ol {
-  padding-left: 1.4em; }
-
-/* line 96, ../sass/vendor/jeet/_typography.scss */
-li, dd {
-  margin-bottom: 6.665px; }
-
-/* line 99, ../sass/vendor/jeet/_typography.scss */
-pre {
-  font-size: 10.664px; }
-
-/* line 103, ../sass/vendor/jeet/_typography.scss */
-header p {
-  color: #aaaaaa; }
-/* line 104, ../sass/vendor/jeet/_typography.scss */
-header h1 ~ p {
-  margin-top: -6.665px; }
-/* line 105, ../sass/vendor/jeet/_typography.scss */
-header h2 ~ p {
-  margin-top: -5.332px; }
-/* line 106, ../sass/vendor/jeet/_typography.scss */
-header h3 ~ p {
-  margin-top: -3.999px; }
-/* line 107, ../sass/vendor/jeet/_typography.scss */
-header h4 ~ p {
-  margin-top: -2.666px; }
-/* line 108, ../sass/vendor/jeet/_typography.scss */
-header h5 ~ p {
-  margin-top: -1.333px; }
-/* line 109, ../sass/vendor/jeet/_typography.scss */
-header h6 ~ p {
-  margin-top: -1.333px; }
-
-/* line 111, ../sass/vendor/jeet/_typography.scss */
-code {
-  padding: 3px 4px;
-  color: #444444;
-  background-color: #F5F5F5;
-  border: 1px solid #E1E1E8;
-  border-radius: 3px;
-  font-family: Menlo, Monaco, monospace; }
-
-/* line 119, ../sass/vendor/jeet/_typography.scss */
-pre {
-  display: block;
-  padding: 7px;
-  background-color: #F5F5F5;
-  border: 1px solid #E1E1E8;
-  border-radius: 3px;
-  white-space: pre-wrap;
-  word-break: break-all;
-  font-family: Menlo, Monaco, monospace;
-  line-height: 160%; }
-
-/* line 131, ../sass/vendor/jeet/_typography.scss */
-.browsehappy span {
-  font-size: 10.664px; }
-
-@media (min-width: 705px) {
-  /* line 138, ../sass/vendor/jeet/_typography.scss */
-  html {
-    font-size: 18.75px;
-    line-height: 28.125px; }
-
-  /* line 142, ../sass/vendor/jeet/_typography.scss */
-  h1 {
-    font-size: 52.5px;
-    line-height: 56.25px;
-    margin-bottom: 18.75px; }
-
-  /* line 147, ../sass/vendor/jeet/_typography.scss */
-  h2 {
-    font-size: 46.875px;
-    line-height: 52.5px;
-    margin-bottom: 15px; }
-
-  /* line 152, ../sass/vendor/jeet/_typography.scss */
-  h3 {
-    font-size: 41.25px;
-    line-height: 48.75px;
-    margin-bottom: 11.25px; }
-
-  /* line 157, ../sass/vendor/jeet/_typography.scss */
-  h4 {
-    font-size: 35.625px;
-    line-height: 45px;
-    margin-bottom: 7.5px; }
-
-  /* line 162, ../sass/vendor/jeet/_typography.scss */
-  h5 {
-    font-size: 30px;
-    line-height: 41.25px;
-    margin-bottom: 3.75px; }
-
-  /* line 167, ../sass/vendor/jeet/_typography.scss */
-  h6 {
-    font-size: 24.375px;
-    line-height: 37.5px;
-    margin-bottom: 0px; }
-
-  /* line 172, ../sass/vendor/jeet/_typography.scss */
-  p, ul, ol, pre, dl {
-    margin-bottom: 18.75px; }
-
-  /* line 175, ../sass/vendor/jeet/_typography.scss */
-  li, dd {
-    margin-bottom: 9.375px; }
-
-  /* line 178, ../sass/vendor/jeet/_typography.scss */
-  pre {
-    font-size: 15px; }
-
-  /* line 182, ../sass/vendor/jeet/_typography.scss */
-  header h1 ~ p {
-    margin-top: -9.375px; }
-  /* line 183, ../sass/vendor/jeet/_typography.scss */
-  header h2 ~ p {
-    margin-top: -7.5px; }
-  /* line 184, ../sass/vendor/jeet/_typography.scss */
-  header h3 ~ p {
-    margin-top: -5.625px; }
-  /* line 185, ../sass/vendor/jeet/_typography.scss */
-  header h4 ~ p {
-    margin-top: -3.75px; }
-  /* line 186, ../sass/vendor/jeet/_typography.scss */
-  header h5 ~ p {
-    margin-top: -1.875px; }
-  /* line 187, ../sass/vendor/jeet/_typography.scss */
-  header h6 ~ p {
-    margin-top: -1.875px; } }
-/**
-* declare your variables here. feel free to make a new file
-**/
 /**
 *Base Styles
 **/
-/* line 12, ../sass/_base.scss */
+/* line 7, ../sass/main.scss */
 body {
   font-size: .9em;
   color: #444444; }
@@ -501,6 +26,12 @@ body {
 .clear {
   clear: both; }
 
+/* line 4, ../sass/core/_theme.scss */
+.theme-brand {
+  background-color: #4ab75c;
+  color: #b548a3;
+  border: 1px solid #255d2e; }
+
 /* line 1, ../sass/core/_typography.scss */
 h1, h2, h3, h4, h5, h6, p {
   margin: 0;
@@ -510,3 +41,5 @@ h1, h2, h3, h4, h5, h6, p {
 a:hover {
   text-decoration: none;
   color: #4ab75c; }
+
+/* No files to import found in components/** */
