--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,3 +1,17 @@
-@import "base";
+@import "vendor/jeet/index";
+@import "variables";
 
-// quick edits go here.
+/**
+*Base Styles
+**/
+body{
+	font-size:.9em;
+	color:$base-color;
+}
+
+
+/**
+*imports
+**/
+@import "core/**";
+@import "components/**";
